--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -1,3 +1,6 @@
 coffee_rewarder:
   cron: "0 0 1 * *"
   class: "CoffeeRewarderJob"
+new_year_points_expirer:
+  cron: "0 0 1 1 *"
+  class: "PointsExpiryJob"
