--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -13,3 +13,6 @@ cash_rebate_awarder:
 birthday_rewarder:
   cron: "0 2 1 * *"
   class: "BirthdayMonthRewardJob"
+quarterly_rewarder:
+  cron: "0 3 1 */3 *"
+  class: "QuarterlyBonusJob"
