--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -16,3 +16,6 @@ birthday_rewarder:
 quarterly_rewarder:
   cron: "0 3 1 */3 *"
   class: "QuarterlyBonusJob"
+loyalty_tier_assigner:
+  cron: "0 4 1 * *"
+  class: "LoyaltyTierAssignerJob"
